tests/errors/for-iterator-trait-planned.ari
struct Cursor {
  current: i64,
}

impl iter::Iterator[i64] for Cursor {
}

fn main() -> i64 {
  let cursor = Cursor { current: 0 };
  for value in cursor {
    return value;
  }
  return 0;
}
